test(about modify)

--- a/css/about.css
+++ b/css/about.css
@@ -579,7 +579,9 @@ header{}
     
     /* ---------------------------------------------------------- */
     
-    #content03{}
+    #content03{
+        margin-bottom: 100px;
+    }
     #content03 .side_title{
         position: static;
         margin-top: 100px;
