--- a/css/about.css
+++ b/css/about.css
@@ -6,6 +6,17 @@ header{}
 
 /* ---------------------------------------------------------- */
 
+
+.topShadow{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 120px;
+    background: linear-gradient(#000, rgba(0, 0, 0, 0));
+}
+
 #about_modal{
     display: none;
     position: fixed;
@@ -52,6 +63,9 @@ header{}
     display: flex;
     align-items: center;
     height: 100%;
+}
+#main_content #main_text{
+    width: 70%;
 }
 #main_content #main_text p{
     font-size: 2.4em;
@@ -356,10 +370,14 @@ header{}
         align-items: center;
         height: 100%;
     }
+    #main_content #main_text{
+        width: 100%;
+    }
     #main_content #main_text p{
         font-size: 1.8em;
         font-weight: bold;
         line-height: 28px;
+        word-break: break-all;
     }
     #main_content #showreel_btn{
         position: relative;
@@ -394,7 +412,7 @@ header{}
     #about_bg{
         position: relative;
         width: 100%;
-        height: 2500px;
+        height: 2000px;
     }
     #about_bg video{
         position: sticky;
@@ -423,7 +441,7 @@ header{}
         font-weight: bold;
     }
     #about_bg #about_content h3:last-child{
-        margin-top: 500px;
+        margin-top: 300px;
         font-size: 2.4em;
         font-weight: bold;
     }
