--- a/css/header_bottom.css
+++ b/css/header_bottom.css
@@ -239,17 +239,17 @@
         z-index: 500;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, .7);
+        background-color: rgba(255, 255, 255, 1);
     }
     
     #inquiry_modal {
         width: 100%;
-        height: 100%;
+        height: auto;
         background-color: #fff;
     }
     
     #modal_bg .modal_close_btn {
-        position: absolute;
+        position: static;
         top: 54px;
         right: 24px;
     }
@@ -276,6 +276,12 @@
     
     #inquiry_content {
         padding: 55px 24px;
+    }
+
+    .inquiry_title{
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
     }
     
     #inquiry_content form {
@@ -328,6 +334,7 @@
         padding: 2px 0;
         font-size: 1.4em;
         font-weight: 400;
+        height: 62px;
         color: #000;
         outline: none;
         resize: none;
@@ -376,7 +383,7 @@
         background-color: #fff;
         border: 1px solid #000;
         border-radius: 30px;
-        font-size: 1.4em;
+        font-size: 1.2em;
         font-weight: bold;
     }
     
