--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ header{
     z-index: 100;
     display: flex;
     align-items: center;
-    height: 100%;
+    height: 85%;
     transition: .5s;
 }
 .en_title{
@@ -324,7 +324,7 @@ header{
     left: 0;
     z-index: 50;
     width: 100%;
-    height: 200px;
+    height: 100px;
     background: linear-gradient(#000, rgba(0, 0, 0, 0));
 }
 .main_title{
@@ -406,7 +406,7 @@ header{
 
 #pagination_sec{
     position: absolute;
-    bottom: 100px;
+    bottom: 10px;
     left: 0;
     z-index: 200;
     width: 100%;
@@ -426,7 +426,7 @@ header{
 }
 .page_btn .loading_sec{
     position: relative;
-    width: 42px;
+    width: 20px;
     height: 2px;
     background-color: rgba(255, 255, 255, .4);
     overflow: hidden;
@@ -436,7 +436,7 @@ header{
     position: absolute;
     top: 0;
     left: -100%;
-    width: 42px;
+    width: 20px;
     height: 2px;
     background-color: #fff;
 }
@@ -508,7 +508,7 @@ header{
     right: 0;
 }
 #organization_sec #organizationText_sec .organization_bg{
-    padding-top: 150px;
+    padding-top: 112px;
     height: 20vh;
     background-color: #000;
 }
@@ -524,9 +524,10 @@ header{
 #organization_sec #organizationText_sec .organization_text{
     font-size: 1.2em;
     font-weight: 400;
+    line-height: 20px;
 }
 #organization_sec #organizationText_sec ul{
-    height: 25vh;
+    height: 30vh;
     background-color: #000;
 }
 #organization_sec #organizationText_sec ul p{
@@ -598,6 +599,7 @@ header{
     font-size: 1.2em;   
     font-weight: 400;
     margin-bottom: 60px;
+    line-height: 20px
 }
 #content03 #project_sec ul{
     border-top: 2px solid #343434;
