--- a/css/exhibition.css
+++ b/css/exhibition.css
@@ -213,7 +213,7 @@ header{
         width: 100%;
     }
     #content01 .title_size{
-        padding: 0 4.16%;
+        padding: 0 24px;
     }
     #content01_bg{
         top: 0;
