--- a/css/footer.css
+++ b/css/footer.css
@@ -118,7 +118,7 @@ footer a:hover{
         display: flex;
         justify-content: space-between;
         flex-direction: column;
-        padding: 50px 24px 60px 24px;
+        padding: 50px 24px 60px;
     }
     
     #sns_sec{
