--- a/css/about.css
+++ b/css/about.css
@@ -611,10 +611,11 @@ header{}
         justify-content: center;
     }
     #clients_content{
-        width: 312px;
         display: flex;
         flex-wrap: wrap;
+        width: auto;
         margin: 0;
+        padding: 0 24px;
     }
     #clients_content .clients_logo{
         display: flex;
